--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: sofle_left
+    shield: kyria_rev2_left
   - board: nice_nano_v2
-    shield: sofle_right
+    shield: kyria_rev2_right
