--- a/config/kyria_rev2.conf
+++ b/config/kyria_rev2.conf
@@ -1,6 +1,9 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
 
+# Name
+CONFIG_ZMK_KEYBOARD_NAME="Kyria"
+
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
 
